# unchecked-transcript

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  pyproject.toml  temp.html
unchecked_transcript/: __init__.py  cli.py  create_html.py  create_transcript.py  mediacontent.py  podcast_html.py  podcast_transcript.py  transcription.py  upload_html.py  util.py  youtube_html.py
unchecked_transcript/templates/: html_template.html.j2  podcast_template.html.j2  youtube_template.html.j2
