[tool.poetry]
name = "unchecked-transcript"
version = "0.1.0"
description = ""
authors = ["Peter Murray <jester@dltj.org>"]
readme = "README.md"
packages = [{include = "unchecked_transcript"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
boto3 = "^1.24.81"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}

[tool.poetry.scripts]
inc = "unchecked_transcript.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
