[project]
authors = [{ name = "Peter Murray", email = "jester@dltj.org" }]
requires-python = "==3.12.10"
dependencies = [
    "click<9.0.0,>=8.1.3",
    "boto3<2.0.0,>=1.24.81",
    "requests<3.0.0,>=2.28.1",
    "webvtt-py<1.0.0,>=0.4.6",
    "spacy>=3.4.1,<4.0.0",
    "Jinja2<4.0.0,>=3.1.2",
    "omegaconf<3.0.0,>=2.2.3",
    "youtube-transcript-api<1.0.0,>=0.6.1",
    "pytubefix (>=10.1.1,<11.0.0)",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz",
    "whisper>=1.1.10",
    "numpy (==2.2)",
]
name = "unchecked-transcript"
version = "0.1.0"
description = ""
readme = "README.md"

[project.scripts]
transcribe = "unchecked_transcript.cli:podcast"
youtube = "unchecked_transcript.cli:youtubevideo"

[tool.setuptools.packages.find]
exclude = ["node_modules", "node_modules.*"]

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[dependency-groups]
dev = [
    "pre-commit<3.0.0,>=2.20.0",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
]
